--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ body {
     max-width: 1440px;
     margin: 120px auto 0 auto;
     border-radius: 20px;
+    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2), 0 10px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .div {
@@ -144,7 +145,7 @@ body {
         background: linear-gradient(to bottom, hsl(273, 75%, 66%), hsl(240, 73%, 65%));
         background-repeat: no-repeat;
         font-family: 'Kumbh Sans', sans-serif;
-        height: max-content;
+        height: 100%;
     }
     .div1 {
         background: white;
